# AI-Smart-Health-Monitoring-System

./: Dockerfile  README.md  app.py  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
tasks /: vitals_check
tasks/anomaly_detection/: grader.py
tasks/vitals_check/: grader.py
tasks/vitals_check/tasks/triage_report/: grader.py
