[project]
name = "health-monitoring-env"
version = "1.0.0"
description = "AI Smart Health Monitoring Environment"
authors = [
    { name = "Aditya" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0",
    "openai"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
